--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^7.10.0",
     "eslint-plugin-nuxt": "^1.0.0"
-  }
+  },
+  "workspaces": [
+    "server"
+  ]
 }
