--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "bootswatch": "^4.5.2",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
+    "nuxt-typed-vuex": "^0.1.22",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.3",
     "vue-class-component": "^7.2.6",
-    "vue-property-decorator": "^9.0.2"
+    "vue-property-decorator": "^9.0.2",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.6",
