--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
     "bootswatch": "^4.5.2",
+    "cookie": "^0.4.1",
     "core-js": "^3.6.5",
+    "js-cookie": "^2.2.1",
     "nuxt": "^2.14.6",
     "nuxt-typed-vuex": "^0.1.22",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.3",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.0.2",
-    "vuex-persist": "^3.1.3"
+    "vuex-persistedstate": "^4.0.0-beta.1"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.6",
@@ -34,6 +36,8 @@
     "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/eslint-config-typescript": "^3.0.0",
     "@nuxtjs/eslint-module": "^2.0.0",
+    "@types/cookie": "^0.4.0",
+    "@types/js-cookie": "^2.2.6",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.10.0",
     "eslint-plugin-nuxt": "^1.0.0"
